# exio4.xyz

./: LICENSE  Main.hs  deploy.sh  exio4xyz.cabal
css/: sakura-dark-solarized.css  style.css
pages/: about.md  resume.md
posts/: first.md  movie-idea-er1.md
templates/: blog.html  footer.html  nav.html  page.html  post.html
