name:                exio4xyz
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
category:            Web
author:              Exio4
maintainer:          me@exio4.xyz
build-type:          Simple
cabal-version:       >=1.16

executable blog
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base
    , containers
    , pandoc     >= 1.11
    , hakyll     >= 4.4
    , yaml
    , filepath
